@@ -16,7 +16,7 @@ DESCRIPTION
     To:     r.e.cipient@here.com
     Cc:     claws-mail-users <claws-mail-users@lists.sourceforge.net>
     Size:   17204
-    Path:   /home/merijn/.sylpheed-gtk2/tempfolder/processing/1
+    Path:   /home/merijn/.claws-mail/tempfolder/processing/1
     Message:        1
     Folder: (null)
 
